# src/catalog/openapi.yml
@@ -173,6 +173,45 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/httputil.HTTPError"
+  "/catalog/search":
+    get:
+      tags:
+        - catalog
+      summary: Catalog search
+      description: Catalog search
+      parameters:
+        - name: keyword
+          in: query
+          description: Search text for catalog
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  "$ref": "#/components/schemas/model.Product"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/httputil.HTTPError"
+        "404":
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/httputil.HTTPError"
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/httputil.HTTPError"
 components:
   schemas:
     httputil.HTTPError:
